[package]
name = "event-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.11.1"
reqwest = { version ="0.12.4", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.19.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
